# CALYX

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
calyx/: __init__.py
calyx/losses/: __init__.py  calyx_probe.py  polar_consistency.py  silog.py  total.py
calyx/models/: __init__.py  calyx_yolo.py  register.py
calyx/modules/: __init__.py  dar.py  pgi.py  pspk.py  sadr.py
calyx/utils/: viz.py
configs/: calyx_yolo11n.yaml
docs/: architecture.md  reproduction.md  usage.md
examples/: quick_start.py  visualize_polarity.py  visualize_sadr.py
tests/: test_calyx_yolo.py  test_losses.py  test_pgi.py  test_pspk.py  test_sadr.py
