# ============================================================
# CALYX: Calyx-Aware Lighting-Yielded eXplainable Framework
# pyproject.toml (PEP 621)
# ============================================================

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calyx"
version = "1.0.0"
description = "Calyx-Aware Lighting-Yielded eXplainable framework for Korla pear surface defect grading"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "CALYX Team" },
]
keywords = [
    "physics-guided deep learning",
    "object detection",
    "fruit defect grading",
    "explainable AI",
    "agricultural vision",
    "YOLO",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.21",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
viz = ["matplotlib>=3.5"]
ultralytics = ["ultralytics>=8.3"]
all = [
    "pytest>=7.0",
    "matplotlib>=3.5",
    "ultralytics>=8.3",
]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.5",
    "ultralytics>=8.3",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
"Source" = "https://github.com/caoyuyu46-oss/CALYX"
"Issues" = "https://github.com/caoyuyu46-oss/CALYX/issues"

# ============================================================
# setuptools configuration
# ============================================================

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["calyx*"]
exclude = ["tests*", "docs*", "examples*", "configs*"]

[tool.setuptools.package-data]
calyx = ["py.typed"]

# ============================================================
# Tooling configuration
# ============================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function call in default argument (common in PyTorch)
]
